crates/au-cli/tests/it/snapshots/it__scenarios__fills-body-level-clean.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 28,
                        "line_col": {
                          "end": {
                            "col": 29,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/fills-body-level-clean/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "fills-body-level-clean"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "fills-body-level-clean"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/fills-body-level-clean/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "content": "[:notes] Preamble note before the first section satisfies the body-level fills.",
            "kind": "inline_code",
            "span": {
              "end": 152,
              "line_col": {
                "end": {
                  "col": 82,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 71
            }
          },
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 160,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 154
            },
            "text": "Why"
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-body-level-clean/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "notes",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-body-level-clean/type/decision.type.yaml",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/fills-body-level-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 152,
                        "line_col": {
                          "end": {
                            "col": 82,
                            "line": 7
                          },
                          "start": {
                            "col": 1,
                            "line": 7
                          }
                        },
                        "start": 71
                      },
                      "file": "<root>/scenarios/fills-body-level-clean/decision.md"
                    },
                    "section_path": [],
                    "surface": "body_inline_code",
                    "value": {
                      "kind": "scalar",
                      "value": "Preamble note before the first section satisfies the body-level fills."
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Preamble note before the first section satisfies the body-level fills."
                }
              }
            ],
            "field": "notes"
          }
        ],
        "file": "<root>/scenarios/fills-body-level-clean/decision.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Why",
            "optional": false,
            "path": [
              "Why"
            ],
            "present": true,
            "span": {
              "end": 160,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 10
                },
                "start": {
                  "col": 1,
                  "line": 9
                }
              },
              "start": 154
            }
          }
        ]
      }
    ]
  }
}
