crates/au-cli/tests/it/snapshots/it__scenarios__fills-body-level-unmet.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "fills-contract-unmet",
      "message": "fills contract for 'notes' not satisfied — no body contribution found in scope <body-level>; contributions are self-tagged (`[[target:notes]]`, `[:notes] value`, or a ```[:notes] fence`) — a bare `[[target]]` is navigational and does not count",
      "related": [
        {
          "file": "<root>/scenarios/fills-body-level-unmet/type/decision.type.yaml",
          "line_col": {
            "end": {
              "col": 17,
              "line": 5
            },
            "start": {
              "col": 12,
              "line": 5
            }
          },
          "range": {
            "end": 69,
            "start": 64
          }
        }
      ],
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/fills-body-level-unmet/decision.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 5
          },
          "start": {
            "col": 1,
            "line": 2
          }
        },
        "range": {
          "end": 100,
          "start": 4
        }
      }
    },
    {
      "code": "malformed-attribution-marker",
      "message": "inline code `[:notes]` starts with `[:` but does not match the `[:fieldName] value` form",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/fills-body-level-unmet/decision.md",
        "line_col": {
          "end": {
            "col": 14,
            "line": 9
          },
          "start": {
            "col": 4,
            "line": 9
          }
        },
        "range": {
          "end": 125,
          "start": 115
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 28,
                        "line_col": {
                          "end": {
                            "col": 29,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/fills-body-level-unmet/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "fills-body-level-unmet"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "fills-body-level-unmet"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/fills-body-level-unmet/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 111,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 105
            },
            "text": "Why"
          },
          {
            "content": "[:notes]",
            "kind": "inline_code",
            "span": {
              "end": 125,
              "line_col": {
                "end": {
                  "col": 14,
                  "line": 9
                },
                "start": {
                  "col": 4,
                  "line": 9
                }
              },
              "start": 115
            }
          },
          {
            "content": "fills:",
            "kind": "inline_code",
            "span": {
              "end": 211,
              "line_col": {
                "end": {
                  "col": 30,
                  "line": 10
                },
                "start": {
                  "col": 22,
                  "line": 10
                }
              },
              "start": 203
            }
          }
        ],
        "claim": [
          "decision"
        ],
        "closure": [
          "decision"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-body-level-unmet/type/decision.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "notes",
            "origins": [
              {
                "name": "decision",
                "origin_path": "<root>/scenarios/fills-body-level-unmet/type/decision.type.yaml",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 58,
                        "line_col": {
                          "end": {
                            "col": 40,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 32
                      },
                      "file": "<root>/scenarios/fills-body-level-unmet/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Migrate dev DB to SQLite"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Migrate dev DB to SQLite"
                }
              }
            ],
            "field": "description"
          },
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 99,
                        "line_col": {
                          "end": {
                            "col": 41,
                            "line": 4
                          },
                          "start": {
                            "col": 8,
                            "line": 4
                          }
                        },
                        "start": 66
                      },
                      "file": "<root>/scenarios/fills-body-level-unmet/decision.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "frontmatter-supplied note value"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "frontmatter-supplied note value"
                }
              }
            ],
            "field": "notes"
          }
        ],
        "file": "<root>/scenarios/fills-body-level-unmet/decision.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Why",
            "optional": false,
            "path": [
              "Why"
            ],
            "present": true,
            "span": {
              "end": 111,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 8
                },
                "start": {
                  "col": 1,
                  "line": 7
                }
              },
              "start": 105
            }
          }
        ]
      }
    ]
  }
}
